<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffbb00">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/topics_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
